# apm2

./: AGENTS.md  CHANGELOG.md  CONTRIBUTING.md  Cargo.toml  README.md  ROOT_ONBOARDING.cac.md  deny.toml  ecosystem.example.toml  fix-clippy-round2.md  fix-pr628-round8.md  fix-pr655-round2.md  research.md
.cargo-husky/hooks/: pre-commit
.github/: app-manifest.json
.github/review-gate/: trusted-reviewers.json
.github/rulesets/: protect-main.json
.github/workflows/: ai-review-code-quality.yml  ai-review-security.yml  ai-review.yml  bench.yml  beta-release.yml  ci.yml  dev-release.yml  docs.yml  forge-admission-barrier.yml  forge-admission-cycle.yml  guardian-intelligence-barrier.yml  miri.yml  release-plz.yml  release.yml  review-gate.yml
cac_context_as_code_prd/: MANIFEST.json  MASTER.json
cac_context_as_code_prd/examples/: admission_receipt.example.json  budget_profile.example.json  capabilities_manifest.example.json  context_pack_manifest.example.json  context_pack_spec.example.json  export_manifest.example.json  holon_contract.example.json  skill_spec.example.json
cac_context_as_code_prd/schemas/: cac.admission_receipt.v1.schema.json  cac.artifact.envelope.v1.schema.json  cac.budget_profile.v1.schema.json  cac.capabilities_manifest.v1.schema.json  cac.common.v1.schema.json  cac.context_pack_manifest.v1.schema.json  cac.context_pack_spec.v1.schema.json  cac.export_manifest.v1.schema.json  cac.holon_contract.v1.schema.json  cac.skill_spec.v1.schema.json
cac_context_as_code_prd/volumes/: V00_Executive_Summary_Problem_Goals_Principles.json  V01_System_Model.json  V02_Formats_Canonicalization_Artifact_Kinds_Schema_Registry.json  V03_End-to-End_Pipeline.json  V04_Messaging_Integration.json  V05_Security_and_Integrity.json  V06_Implementation_Plan.json  V07_Testing_Rollout_and_Metrics.json  V09_Risks_Open_Questions_Definition_of_Done_References.json
crates/apm2-cli/: Cargo.toml
crates/apm2-core/: Cargo.toml  build.rs
crates/apm2-lab2/: Cargo.toml
crates/apm2-lab2/src/: agent.rs  artifact.rs  controller.rs  council.rs  git_audit.rs  lib.rs  main.rs  prompt.rs  run.rs  schema.rs  spec.rs
crates/calloc/: Cargo.toml  README.md
crates/calloc/benches/: alloc_bench.rs
crates/calloc/src/: allocator.rs  block.rs  budget.rs  error.rs  index.rs  lib.rs  main.rs  manifest.rs  ordering.rs  pack.rs  selection.rs  stats.rs  wire.rs
crates/calloc/src/cli/: common.rs  mod.rs  pack.rs  page.rs  stream.rs
crates/calloc/src/renderer/: mod.rs  raw.rs
crates/calloc/tests/: integration.rs
crates/ctxpage/: Cargo.toml  README.md
crates/ctxpage/benches/: pagination_bench.rs
crates/ctxpage/src/: cursor.rs  error.rs  io.rs  lib.rs  main.rs  model.rs  paginator.rs  tokenizer.rs
documents/: README.md
documents/lab/: rfc0022_control_spec.v1.json  (+1 more)
proto/: apm2d_runtime_v1.proto  kernel_events.proto
(+681 files in other folders)
