[package]
name = "apm2-lab2"
description = "RFC control-loop laboratory harness with Claude-backed agent councils"
version.workspace = true
edition.workspace = true
rust-version.workspace = true
license.workspace = true
repository.workspace = true
homepage.workspace = true
documentation.workspace = true
authors.workspace = true
keywords.workspace = true
categories.workspace = true

[[bin]]
name = "apm2-lab2"
path = "src/main.rs"

[dependencies]
anyhow.workspace = true
async-trait.workspace = true
clap.workspace = true
serde.workspace = true
serde_json.workspace = true
tokio.workspace = true
uuid.workspace = true
rand.workspace = true
chrono.workspace = true
blake3.workspace = true

[dev-dependencies]
tempfile.workspace = true

[lints]
workspace = true
