[package]
name = "calloc"
version = "0.1.0"
edition.workspace = true
rust-version.workspace = true
license.workspace = true
repository.workspace = true
homepage.workspace = true
documentation = "https://docs.rs/calloc"
authors.workspace = true
keywords = ["context", "prompt", "deterministic", "allocation", "agent"]
categories = ["command-line-utilities", "development-tools"]
description = "Deterministic context allocation for AI coding agents"
readme = "README.md"

[dependencies]
base64.workspace = true
blake3.workspace = true
chrono.workspace = true
clap = { workspace = true, features = ["derive"] }
ctxpage = { path = "../ctxpage", version = "0.1.0" }
glob.workspace = true
hex.workspace = true
memchr.workspace = true
serde.workspace = true
serde_json.workspace = true
thiserror.workspace = true
toml.workspace = true

[dev-dependencies]
tempfile.workspace = true
criterion.workspace = true

[[bin]]
name = "calloc"
path = "src/main.rs"

[[bench]]
name = "alloc_bench"
harness = false

[lints]
workspace = true
